--- a/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/home.hbs
+++ b/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/home.hbs
@@ -1,42 +1,15 @@
 
-            <section id="home-page">
-                <article class="home-page-content">
-                    <h1>Find The Job That Fits Your Life</h1>
-                    <p>On this site, you can find hundreds of job offers, do not hesitate, and apply now.</p>
-                    <a href="/ad/catalog" class="view-all-ads">View all ads</a>
-                </article>
-                <article class="home-page-image">
-                    <!-- Do not forget to change the path to the image -->
-                    <img src="/static/img/man.png" alt="man">
-                </article>
-            </section>
+        <!--Welcome Page-->
+        <section class="welcome-content">
+            <article class="welcome-content-text">
+                <h1>Place for Your</h1>
+                <h1 class="bold-welcome">Pets photos</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+            </article>
+            <article class="welcome-content-image">
+                <img src="/static/images/header-dog.png" alt="dog">
+            </article>
+        </section>
 
-            <section class="intro">
-                <article class="intro-left-side">
-                    <article class="intro-left-side-image">
-                        <!-- Do not forget to change the path to the image -->
-                        <img src="/static/img/people-group.png" alt="people">
-                    </article>
-                    <article class="intro-left-side-text">
-                        <h1>You're Looking for Trending Jobs!</h1>
-                        <h2>See the first three ads you applied for.</h2>
-                    </article>
-                </article>
-
-                <article class="intro-symbol">
-                    <!-- Do not forget to change the path to the image -->
-                    <img src="/static/img/strip-square.png" alt="strip-square">
-                </article>
-
-                <article class="intro-right-side">
-        
-                    <!--If there are job ads in the database, show them (max 3)-->
-                    {{#each ads}}
-                    {{> ad}}
-                    {{else}}
-                    <!--If not show:-->
-                    <p class="no-ads-created">No ads created!</p>
-                    {{/each}}
-
-                </article>
-            </section>
+ 
+    
