--- a/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/layouts/main.hbs
@@ -1,70 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Starts Head Section -->
 
 <head>
-    <meta charset="UTF-8">
-    <title>Home Page</title>
-
-    <!-- Do not forget to change the path to the css file -->
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="/static/images/free-30-instagram-stories-icons23_122570.png">
+    <title>Petstagram</title>
 </head>
 
-<body>
+<!-- Starts Body Section -->
 
-    <div class="box">
+<body>
+    <!--Error Container-->
         {{#if errors}}
-        <!-- In case of error, you should display div with class "error-box" -->
-        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-        <div class="error-box">
+        <div>
+        <div class="errorContainer">
             {{#each errors}}
             <p>{{this}}</p>
             {{/each}}
         </div>
+        </div>
         {{/if}}
-        <header class="header">
-            <article class="header-logo">
-                <!-- Do not forget to change the path to the image -->
-                <img src="/static/img/logo.png">
-            </article>
-            <nav class="header-nav">
-                <ul class="header-nav-list">
 
-                    <li class="header-nav-list-item active">
-                        <a href="/" class="header-nav-list-item-link active">Home Page</a>
-                    </li>
+    <!-- Starts Header Section with Navigation Bar -->
+    <header>
+        <nav class="navbar">
+            <div class="container">
+                <div class="logo">
+                    <!-- Link to Home Page -->
+                    <a href="/">
+                        <img width="50px" src="/static/images/free-30-instagram-stories-icons23_122570.png" alt="img1">
+                    </a>
+                    <!-- Link to Home Page -->
+                    <a class="home" href="/">
+                        <i>Petstagram</i>
+                    </a>
+                </div>
 
-                    <li class="header-nav-list-item">
-                        <a href="/ad/catalog" class="header-nav-list-item-link">All ads</a>
-                    </li>
-                    {{#if user}}
-                    <li class="header-nav-list-item">
-                        <a href="/ad/create" class="header-nav-list-item-link">Create Ad</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="#" class="header-nav-list-item-link">Search</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="/auth/logout" class="header-nav-list-item-link">Logout</a>
-                    </li>
-                    {{else}}
-                    <li class="header-nav-list-item">
-                        <a href="/auth/register" class="header-nav-list-item-link">Register</a>
-                    </li>
-                    <li class="header-nav-list-item">
-                        <a href="/auth/login" class="header-nav-list-item-link">Login</a>
-                    </li>
-                    {{/if}}
-                </ul>
-            </nav>
-        </header>
+                <div class="nav-links">
+                    <ul class="nav-group">
+                        <li class="nav-item">
+                            <!-- Link to Catalog Page -->
+                            <a href="/photo/catalog">
+                                <i>Catalog</i>
+                            </a>
+                        </li>
 
-        <main>
-            {{{body}}}
-        </main>
+                        {{#if user}}
+                        <!--For login users-->
+                        <li class="nav-item">
+                            <!-- Link to Add Photo Page -->
+                            <a href="/photo/create">
+                                <i>Add Photo</i>
+                            </a>
+                        </li>
 
-        <footer>
-            <p>©Js Back-End Final Exam 2022</p>
-        </footer>
+                        <li class="nav-item">
+                            <!-- Link to Profile Page -->
+                            <a href="/photo/myPage">
+                                <i>Profile</i>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <!-- Link to Logout Page -->
+                            <a href="/auth/logout">
+                                <i>Logout</i>
+                            </a>
+                        </li>
+                        {{else}}
+
+                        <!--For Guest User-->
+                        <li class="nav-item">
+                            <!-- Link to Login Page -->
+                            <a href="/auth/login">
+                                <i>Login</i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <!-- Link to Register Page -->
+                            <a href="/auth/register">
+                                <i>Register</i>
+                            </a>
+                        </li>
+                        {{/if}}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+<main>
+    {{{body}}}
+</main>
+
+<div class="footer">
+        <span class="footer-section">
+            © 2023 SoftUni Back-End Exam
+        </span>
     </div>
 
 </body>
