--- a/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/login.hbs
+++ b/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/login.hbs
@@ -1,31 +1,30 @@
 
-            <section id="login-page">
+        <!-- Start Login Section-->
+        <div class="login-register-div">
+            <div class="login-register-box">
+                <h1>Petstagram</h1>
 
-                <article class="login-page-container">
+                <!-- Start Login Form-->
+                <form action="/auth/login" method="POST">
+                    <p>
+                        <label>Username:</label>
+                        <input type="text" name="username" placeholder="Username">
+                    </p>
+                    <p>
+                        <label>Password:</label>
+                        <input type="password" name="password" placeholder="Password">
+                    </p>
 
-                    <form action="/auth/login" method="POST" class="login-page-form">
-                        <h2>Login</h2>
-                        <p>Welcome, see the new ads!</p>
+                    <!-- Login Button-->
+                    <button type="submit">LogIn</button>
+                </form>
 
-                        <label for="email">Email:</label>
-                        <input type="text" id="email" placeholder="petar@abv.bg" name="email">
+            </div>
+            <div class="second-option">
 
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" placeholder="******" name="password">
+                <!-- Link to Register Page-->
+                <p>Don't have account? <a href="/auth/register">Register</a></p>
+            </div>
+        </div>
 
-                        <article class="login-page-button">
-                            <button class="btn-login">Login</button>
-                        </article>
 
-                        <article class="no-account">
-                            <p>Don't have an account? <a href="/auth/register">Sign up</a></p>
-                        </article>
-                    </form>
-
-                    <article class="login-page-image">
-                        <!-- Do not forget to change the path to the image -->
-                        <img src="/static/img/job.png" alt="job-image">
-                    </article>
-                </article>
-
-            </section>
