--- a/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/register.hbs
+++ b/JS Web/JS Back-end/08. Exam preparation 3/Petstagram/views/register.hbs
@@ -1,38 +1,28 @@
 
-            <section id="register-page">
+        <!-- Start Register Section -->
+        <div class="login-register-div">
+            <div class="login-register-box">
+                <h1>Petstagram</h1>
 
-                <article class="register-page-container">
-                    <form action="/auth/register" method="POST" class="register-page-form">
-                        <h2>Register</h2>
-                        <p>Join us and find the perfect job.</p>
+                <!-- Start Register Form -->
+                <form action="/auth/register" method="POST">
+                    <input type="text" name="username" placeholder="Username">
 
-                        <label for="email">Email:</label>
-                        <input type="text" id="email" placeholder="petar@abv.bg" name="email">
+                    <input type="email" name="email" placeholder="Email">
 
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" placeholder="******" name="password">
+                    <input type="password" name="password" placeholder="Password">
 
-                        <label for="repeat-password">Repeat Password:</label>
-                        <input type="password" id="repeat-password" placeholder="******" name="rePass">
+                    <input type="password" name="rePass" placeholder="Repeat Password">
 
-                        <label for="description">Briefly describe your skills:</label>
-                        <input type="text" id="description" placeholder="Experience with HTML 5, CSS 3, Node.js" name="description">
+                    <!-- Register Button -->
+                    <button type="submit">Register</button>
+                </form>
 
-                        <article class="register-page-button">
-                            <button class="btn-register">Register</button>
-                        </article>
+            </div>
+            <div class="second-option">
 
-                        <article class="account">
-                            <p>Already have an account? <a href="/auth/login">Sign in</a></p>
-                        </article>
+                <!-- Link to Login Page -->
+                <p>Have an account? <a href="/auth/login">LogIn</a></p>
+            </div>
+        </div>
 
-                    </form>
-
-                    <article class="register-page-image">
-                        <!-- Do not forget to change the path to the image -->
-                        <img src="/static/img/job.png" alt="image">
-                    </article>
-                </article>
-
-            </section>
-  
