--- a/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/layouts/main.hbs
@@ -6,7 +6,7 @@
     <title>Home Page</title>
 
     <!-- Do not forget to change the path to the css file -->
-    <link rel="stylesheet" href="/style/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 
 <body>
@@ -24,15 +24,15 @@
         <nav>
 
             <!-- Do not forget to change the path to the image -->
-            <img src="/style/img/art-logo.png" alt="logo">
-            <a href="/art/catalog">ArtGallery</a>
+            <img src="/static/img/art-logo.png" alt="logo">
+            <a href="/product/catalog">ArtGallery</a>
 
             <ul class="menu">
-                <li><a href="/art/catalog">Gallery</a></li>
+                <li><a href="/product/catalog">Gallery</a></li>
                 {{#if user}}
                 <!-- Logged users -->
-                <li><a href="/art/create">Create Publication</a></li>
-                <li><a href="/art/profile">Profile</a></li>
+                <li><a href="/product/create">Create Publication</a></li>
+                <li><a href="/product/profile">Profile</a></li>
                 <li><a href="/auth/logout">Logout</a></li>
                 <!-- Guest users -->
                 {{else}}
