--- a/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/layouts/main.hbs
+++ b/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/layouts/main.hbs
@@ -24,7 +24,7 @@
 
             <!-- Do not forget to change the path to the image -->
             <img src="/static/img/art-logo.png" alt="logo">
-            <a href="/product/catalog">ArtGallery</a>
+            <a href="/">ArtGallery</a>
 
             <ul class="menu">
                 <li><a href="/product/catalog">Gallery</a></li>
