--- a/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/partials/productHome.hbs
+++ b/JS Web/JS Back-end/Exams/End Retake Exam - 14 Dec 2021/01. ArtGallery/views/partials/productHome.hbs
@@ -2,6 +2,6 @@
                         <h1>Title: {{title}}</h1>
 
                         <!--If no one has shared the post yet, the number should be zero -->
-                        <p>Number of people shared the publication: 0</p>
+                        <p>Number of people shared the publication: {{users.length}}</p>
                         <a href="/product/details/{{_id}}" class="image-details">View publication</a>
                     </article>
